support-section-added

--- a/styles/style.css
+++ b/styles/style.css
@@ -163,7 +163,7 @@ main {
 }
 
 .support {
-    background-image: url(/assets/handshake.jpg);
+    background-image: url('../assets/handshake.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
